Cleaned up some useless code

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,8 @@
     margin-right: 0px;
 }
 
-.searcharea {
-    background-color: #e6f2ff;
+.search {
+    background-color: #ffffff;
     padding: 20px;
 }
 
